--- a/rtrap-pushshift-datamine-2012-2020.ipynb
+++ b/rtrap-pushshift-datamine-2012-2020.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# r/Trap Data Mining with Pushshift\n",
+    "[Pushshift.io](https://pushshift.io/) archives and serves all Reddit comments and submissions for data analytics. Although Reddit has its own API [PRAW](https://praw.readthedocs.io/en/latest/) for queries, Pushshift offers more flexibility when it comes to querying and analyzing large quantities of Reddit data. There is also a wrapper for Pushshift API [PSAW](https://psaw.readthedocs.io/en/latest/) that may make it easier to query data off of it that is worth looking into for future use.\n",
+    "\n",
+    "[Pushshift Guide](https://www.reddit.com/r/pushshift/comments/bcxguf/new_to_pushshift_read_this_faq/)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +26,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to generate url used to query submissions of a subreddit in a given timeframe, and parse text in JSON format. Note that Pushshift has a 1000-size limit for returned data so it is useful to separate queries into chunks by before and after dates. The sleep function is for when the script is exceeding the server rate limit and need to slow down before continuing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +50,19 @@
     "            print(\"Failed to parse:\")\n",
     "            print(r.text)\n",
     "            time.sleep(60)\n",
-    "            continue\n",
-    "        "
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to parse keys in the input JSON text and store data of interest in a dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,29 +82,65 @@
     "    except KeyError:\n",
     "        selftext = \"NaN\"    \n",
     "    \n",
-    "    subData.append((sub_id,title,url,author,score,selftext,created,created_utc,numComms,permalink))\n",
+    "    subData.append((sub_id,\n",
+    "                    title,\n",
+    "                    url,\n",
+    "                    author,\n",
+    "                    score,\n",
+    "                    selftext,\n",
+    "                    created,\n",
+    "                    created_utc,\n",
+    "                    numComms,\n",
+    "                    permalink))\n",
+    "    \n",
     "    subStats[sub_id] = subData"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Subreddit to query\n",
-    "sub='Trap'\n",
-    "#before and after dates\n",
-    "before = datetime.datetime(2020, 5, 16)\n",
-    "after = datetime.datetime(2012, 5, 20)\n",
-    "query = \"\"\n",
-    "subCount = 0\n",
-    "subStats = {}\n"
+    "Function to save the dictionary of Reddit posts into a CSV, row by row. Note that the headers list should match the order of information stored by the previous function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updateSubs_file(filename):\n",
+    "    upload_count = 0\n",
+    "    with open(filename, 'w', newline='', encoding='utf-8') as file: \n",
+    "        a = csv.writer(file, delimiter=',')\n",
+    "        headers = [\"Submission ID\",\n",
+    "                   \"Title\",\n",
+    "                   \"Url\",\n",
+    "                   \"Author\",\n",
+    "                   \"Score\",\n",
+    "                   \"Body Text\",\n",
+    "                   \"Date Created\",\n",
+    "                   \"Date Created UTC\",\n",
+    "                   \"Comments\", \n",
+    "                   \"Permalink\"]\n",
+    "        a.writerow(headers)\n",
+    "        for sub in subStats:\n",
+    "            a.writerow(subStats[sub][0])\n",
+    "            upload_count+=1\n",
+    "            \n",
+    "        print(str(upload_count) + \" submissions have been uploaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up parameters begin data mining. The while loop will continue to generate new urls with new \"after\" dates until the length of the returned data is 0. The print statements show the length of each query and the last date queried. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -586,100 +645,82 @@
       "1000\n",
       "2020-04-28 16:41:11\n",
       "https://api.pushshift.io/reddit/search/submission/?title=&size=1000&after=1588117271&before=2020-05-16 00:00:00&subreddit=Trap\n",
-      "866\n",
-      "2020-05-15 14:14:29\n"
+      "877\n",
+      "2020-05-15 16:49:49\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.pushshift.io/reddit/search/submission/?title=&size=1000&after=1589577269&before=2020-05-16 00:00:00&subreddit=Trap\n",
-      "0\n"
+      "https://api.pushshift.io/reddit/search/submission/?title=&size=1000&after=1589586589&before=2020-05-16 00:00:00&subreddit=Trap\n"
      ]
     }
    ],
    "source": [
-    "# Will run until all posts have been gathered \n",
-    "# from the 'after' date up until before date\n",
+    "sub = 'Trap'\n",
+    "before = datetime.datetime(2020, 5, 16)\n",
+    "after = datetime.datetime(2012, 5, 20)\n",
+    "query = \"\"\n",
+    "subStats = {}\n",
+    "\n",
     "data = getPushshiftData(query, after, before, sub)\n",
     "while len(data) > 0:\n",
     "    for submission in data:\n",
     "        collectSubData(submission)\n",
-    "        subCount+=1\n",
-    "    # Calls getPushshiftData() with the created date of the last submission\n",
     "    print(len(data))\n",
-    "    print(str(datetime.datetime.fromtimestamp(data[-1]['created_utc'])))\n",
     "    after = data[-1]['created_utc']\n",
-    "    data = getPushshiftData(query, after, before, sub)\n",
-    "    \n",
-    "print(len(data))"
+    "    print(str(datetime.datetime.fromtimestamp(after)))\n",
+    "    data = getPushshiftData(query, after, before, sub)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print total number of submissions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "161866 submissions have added to list\n",
-      "1st entry is:\n",
-      "Hudson Mohawk - Gooo created: \n",
-      "Last entry is:\n",
-      "[(Ancient)Throwback] Vex'd - Angels (Dubstep from 2005) created: \n"
+      "161877 submissions have added to list\n"
      ]
     }
    ],
    "source": [
-    "print(str(len(subStats)) + \" submissions have added to list\")\n",
-    "print(\"1st entry is:\")\n",
-    "print(list(subStats.values())[0][0][1] + \" created: \" + str(list(subStats.values())[0][0][5]))\n",
-    "print(\"Last entry is:\")\n",
-    "print(list(subStats.values())[-1][0][1] + \" created: \" + str(list(subStats.values())[-1][0][5]))"
+    "print(str(len(subStats)) + \" submissions have added to list\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save dictionary to CSV with specified filename."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input filename of submission file, please add .csv\n",
-      "rtrap-2012-5-20-2020-5-15.csv\n",
-      "161866 submissions have been uploaded\n"
+      "161877 submissions have been uploaded\n"
      ]
     }
    ],
    "source": [
-    "def updateSubs_file():\n",
-    "    upload_count = 0\n",
-    "    print(\"input filename of submission file, please add .csv\")\n",
-    "    filename = input()\n",
-    "    with open(filename, 'w', newline='', encoding='utf-8') as file: \n",
-    "        a = csv.writer(file, delimiter=',')\n",
-    "        headers = [\"Submission ID\",\"Title\",\"Url\",\"Author\",\"Score\",\"Body Text\",\"Date Created\",\"Date Created UTC\",\"Comments\", \"Permalink\"]\n",
-    "        a.writerow(headers)\n",
-    "        for sub in subStats:\n",
-    "            a.writerow(subStats[sub][0])\n",
-    "            upload_count+=1\n",
-    "            \n",
-    "        print(str(upload_count) + \" submissions have been uploaded\")\n",
-    "        \n",
-    "updateSubs_file()"
+    "updateSubs_file(r'rtrap-2012-5-20-2020-5-15.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
